// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <div
      class="t-is-disabled t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-is-disabled t-input--suffix"
      >
        <input
          class="t-input__inner"
          disabled=""
          placeholder="选择时间"
          readonly=""
          value=""
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`hide-clear-button.jsx 1`] = `
<DocumentFragment>
  <h3>
    禁止清空
  </h3>
  <br />
  <div
    class="t-popup-reference"
  >
    <div
      class="t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-input--suffix"
      >
        <input
          class="t-input__inner"
          readonly=""
          value=" "
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <div
        class="t-time-picker__input"
      >
        <span
          class="t-time-picker__input-item"
        >
          <input
            class="t-time-picker__input-item-input"
            disabled=""
            value="12"
          />
        </span>
        <span
          class="t-time-picker__input-item"
        >
          :
          <input
            class="t-time-picker__input-item-input"
            disabled=""
            value="00"
          />
        </span>
        <span
          class="t-time-picker__input-item"
        >
          :
          <input
            class="t-time-picker__input-item-input"
            disabled=""
            value="00"
          />
        </span>
      </div>
    </div>
  </div>
  <br />
  <br />
  <h3>
    允许清空
  </h3>
  <br />
  <div
    class="t-popup-reference"
  >
    <div
      class="t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-input--suffix"
      >
        <input
          class="t-input__inner"
          readonly=""
          value=" "
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <div
        class="t-time-picker__input"
      >
        <span
          class="t-time-picker__input-item"
        >
          <input
            class="t-time-picker__input-item-input"
            disabled=""
            value="12"
          />
        </span>
        <span
          class="t-time-picker__input-item"
        >
          :
          <input
            class="t-time-picker__input-item-input"
            disabled=""
            value="00"
          />
        </span>
        <span
          class="t-time-picker__input-item"
        >
          :
          <input
            class="t-time-picker__input-item-input"
            disabled=""
            value="00"
          />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`hm.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <div
      class="t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-input--suffix"
      >
        <input
          class="t-input__inner"
          placeholder="选择时间"
          readonly=""
          value=""
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`hms.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <div
      class="t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-input--suffix"
      >
        <input
          class="t-input__inner"
          placeholder="选择时间"
          readonly=""
          value=""
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyboard.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <div
      class="t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-input--suffix"
      >
        <input
          class="t-input__inner"
          readonly=""
          value=" "
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <div
        class="t-time-picker__input"
      >
        <span
          class="t-time-picker__input-item"
        >
          <input
            class="t-time-picker__input-item-input"
            value="12"
          />
        </span>
        <span
          class="t-time-picker__input-item"
        >
          :
          <input
            class="t-time-picker__input-item-input"
            value="08"
          />
        </span>
        <span
          class="t-time-picker__input-item"
        >
          :
          <input
            class="t-time-picker__input-item-input"
            value="00"
          />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`range.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <div
      class="t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-input--suffix"
      >
        <input
          class="t-input__inner"
          placeholder="选择时间"
          readonly=""
          value=""
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`show-steps.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <div
      class="t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-input--suffix"
      >
        <input
          class="t-input__inner"
          placeholder="选择时间"
          readonly=""
          value=""
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`twelve-hour-meridian.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <div
      class="t-time-picker"
    >
      <div
        class="t-time-picker__group t-input t-input--suffix"
      >
        <input
          class="t-input__inner"
          placeholder="选择时间"
          readonly=""
          value=""
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-time t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
